--- a/webgl/hello_world.html
+++ b/webgl/hello_world.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>WebGL Hello world</title>
 </head>
+
 <body>
   <canvas width="300" height="300"></canvas>
   <script>
     const canvas = document.querySelector('canvas');
     const gl = canvas.getContext('webgl');
-    
+
+    /** 顶点着色器 */
     const vertex = `
       attribute vec2 position;
       varying vec3 color;
-
       void main() {
         gl_PointSize = 1.0;
         color = vec3(0.5 + position * 0.5, 0.0);
@@ -22,16 +24,17 @@
       }
     `;
 
+    /** 片元着色器 */
     const fragment = `
       precision mediump float;
       varying vec3 color;
-
       void main()
       {
         gl_FragColor = vec4(color, 1.0);
       }    
     `;
 
+    // 创建shader对象
     const vertexShader = gl.createShader(gl.VERTEX_SHADER);
     gl.shaderSource(vertexShader, vertex);
     gl.compileShader(vertexShader);
@@ -40,29 +43,39 @@
     gl.shaderSource(fragmentShader, fragment);
     gl.compileShader(fragmentShader);
 
-
+    /** 创建 WebGLProgram 对象
+     * 并将这两个 shader 关联到这个 WebGL 程序上。
+     * WebGLProgram 对象的创建过程主要是添加 vertexShader 和 fragmentShader，
+     * 然后将这个 WebGLProgram 对象链接到 WebGL 上下文对象上
+     * useProgram 选择启用这个 WebGLPrgame 对象
+     **/
     const program = gl.createProgram();
     gl.attachShader(program, vertexShader);
     gl.attachShader(program, fragmentShader);
     gl.linkProgram(program);
     gl.useProgram(program);
 
+    // 类型化数组，定义三个顶点
     const points = new Float32Array([
       -1, -1,
       0, 1,
       1, -1,
     ]);
 
-    const bufferId = gl.createBuffer();
-    gl.bindBuffer(gl.ARRAY_BUFFER, bufferId);
-    gl.bufferData(gl.ARRAY_BUFFER, points, gl.STATIC_DRAW);
+    // 3： 将数据存入缓冲区
+    const bufferId = gl.createBuffer(); //创建一个缓存对象
+    gl.bindBuffer(gl.ARRAY_BUFFER, bufferId); //将它绑定为当前操作对象
+    gl.bufferData(gl.ARRAY_BUFFER, points, gl.STATIC_DRAW); //再把当前的数据写入缓存对象
 
-    const vPosition = gl.getAttribLocation(program, 'position');
-    gl.vertexAttribPointer(vPosition, 2, gl.FLOAT, false, 0, 0);
-    gl.enableVertexAttribArray(vPosition);
+    // 4: 将缓冲区数据读取到GPU
+    const vPosition = gl.getAttribLocation(program, 'position'); // 获取顶点着色器中的position变量的地址
+    gl.vertexAttribPointer(vPosition, 2, gl.FLOAT, false, 0, 0);//给变量设置长度和类型
+    gl.enableVertexAttribArray(vPosition);// 激活这个变量
 
-    gl.clear(gl.COLOR_BUFFER_BIT);
-    gl.drawArrays(gl.TRIANGLES, 0, points.length / 2);
+    // 5: 执行着色器程序完成绘制
+    gl.clear(gl.COLOR_BUFFER_BIT); // 将当前画布的内容清除
+    gl.drawArrays(gl.TRIANGLES, 0, points.length / 2); //调用 gl.drawArrays 传入绘制模式。gl.TRIANGLES 表示以三角形为图元绘制，再传入绘制的顶点偏移量和顶点数量，WebGL 就会将对应的 buffer 数组传给顶点着色器，并且开始绘制
   </script>
 </body>
+
 </html>
